# RayTracingWeekend

./: CMakeLists.txt  README.md  color.hpp  main.cpp  ray.hpp  vec3.hpp
results/: cam_pos0.ppm  cam_pos1.ppm  cam_pos_good.ppm  focus_blur.ppm
results/grep_matte/: grey_90percept.ppm  lambertian_reflection.ppm  lambertian_reflection_01.ppm  lambertian_reflection_01_gammacorrect.ppm
results/material/: die.ppm  die_refract_reflect.ppm  fuzz.ppm  hollow_glass.ppm  metal.ppm  metal099.ppm
results/pixel_sample/: t1.ppm  t10.ppm  t100.ppm
src/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
test/: CMakeLists.txt  main.cpp
